--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,30 @@
-name: Sliver Server ARM Build
-on: [push]
+name: Final Sliver Build
+on: [push, workflow_dispatch]
 jobs:
-  build:
+  build-server:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.21'
 
-      - name: Fetch and Build Sliver Server
+      - name: Build Sliver Server
         run: |
-          git clone https://github.com/BishopFox/sliver.git .sliver
-          cd .sliver
-          go mod download
-          GOOS=linux GOARCH=arm64 CGO_ENABLED=1 make server
+          # بناء السيرفر مباشرة من المصدر الرسمي
+          git clone https://github.com/BishopFox/sliver.git source-code
+          cd source-code
+          export GOOS=linux
+          export GOARCH=arm64
+          # بناء السيرفر مع جلب الـ Assets
+          make server
           mv sliver-server ../sliver-server-arm64
 
-      - name: Release Server Artifact
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sliver-server-binary
+          name: sliver-server-arm64
           path: sliver-server-arm64
