--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,17 +11,21 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.21'
+          cache: false # تعطيل الكاش لتجنب خطأ go.sum
 
       - name: Build Sliver Server
         run: |
-          # بناء السيرفر مباشرة من المصدر الرسمي
+          # جلب الكود المصدري
           git clone https://github.com/BishopFox/sliver.git source-code
           cd source-code
-          export GOOS=linux
-          export GOARCH=arm64
-          # بناء السيرفر مع جلب الـ Assets
-          make server
-          mv sliver-server ../sliver-server-arm64
+          
+          # تحميل المكتبات المطلوبة
+          go mod download
+          
+          # البناء المباشر للسيرفر فقط (ARM64)
+          # سنضيف خيارات الـ LDFlags لدمج الـ Assets وتقليل الحجم
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=1 \
+          go build -v -ldflags "-s -w" -o ../sliver-server-arm64 ./server
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
