--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,23 +11,24 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.21'
+          cache: false
 
-      - name: Install Build Essentials
+      - name: Install Tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y make git gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
+          sudo apt-get install -y make git gcc-aarch64-linux-gnu
 
       - name: Build Sliver Server
         run: |
           git clone https://github.com/BishopFox/sliver.git source-code
           cd source-code
           
-          # تحميل المكتبات والـ Assets
-          go mod download
+          # 1. توليد الـ Assets (هذا هو السطر المفقود)
+          make generate
           
-          # بناء السيرفر لـ ARM64 (v8.1) باستخدام الـ Cross Compiler
+          # 2. بناء السيرفر لـ ARM64
           GOOS=linux GOARCH=arm64 CGO_ENABLED=1 CC=aarch64-linux-gnu-gcc \
-          go build -v -ldflags "-s -w" -o ../sliver-server-arm64 ./server
+          go build -v -o ../sliver-server-arm64 ./server
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
