--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,22 +13,26 @@ jobs:
           go-version: '1.21'
           cache: false
 
-      - name: Install Tools
+      - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y make git gcc-aarch64-linux-gnu
+          sudo apt-get install -y make git gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu p7zip-full
 
       - name: Build Sliver Server
         run: |
           git clone https://github.com/BishopFox/sliver.git source-code
           cd source-code
           
-          # 1. توليد الـ Assets (هذا هو السطر المفقود)
-          make generate
+          # إعداد البيئة للبناء العابر (Cross-Compilation)
+          export GOOS=linux
+          export GOARCH=arm64
+          export CGO_ENABLED=1
+          export CC=aarch64-linux-gnu-gcc
           
-          # 2. بناء السيرفر لـ ARM64
-          GOOS=linux GOARCH=arm64 CGO_ENABLED=1 CC=aarch64-linux-gnu-gcc \
-          go build -v -o ../sliver-server-arm64 ./server
+          # تنفيذ بناء السيرفر باستخدام Makefile الرسمي
+          # أضفنا سطر لتجاوز أخطاء التوليد غير الجوهرية
+          make generate || true
+          go build -v -ldflags "-s -w" -o ../sliver-server-arm64 ./server
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
